<resources>
    <string name="app_name">SgCAN</string>
    <string name="google_android_map_api_key">AIzaSyAbl6sz8odLi2sK_kHrHO9u0u6MEurWzEo</string>
    <string name="login_username">Username:</string>
    <string name="login_pw">Password:</string>
    <string name="login">Login</string>
    <string name="registrationPrompt"><u>Don\'t have an account? Click here to register</u></string>
    <string name="loginPrompt"><u>Already have an account? Click here to login</u></string>
    <string name="register">Register</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="mobile">Phone Number:</string>
    <string name="address">Address:</string>
    <string name="password">Password:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_location_provider">Oops, no location data available</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="condition">Medical Condition:</string>
    <string name="remark">Remarks:</string>
    <string name="cancel">Cancel</string>
    <string name="adduser">Add User</string>
    <string name="signout">Sign Out</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">jTSRiOx8IZfBmyAnZWvyyIiP8HE04GS1AkFaLnma</string>
    <string name="back4app_client_key">surL5NbO99K5sCb1Wh6L7Id1nNKL5FWoKuzofHTU</string>
    <string name="title_activity_missing">MissingActivity</string>
    <string name="missingperson">Missing Person</string>
    <string name="missingcall">Call person\'s guardian</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="save">Save</string>
    <string name="pfpAdd">Picture:</string>
    <string name="pfpchoose">Would you like to take a picture or select existing picture from gallery?</string>
    <string name="takepicture">Take picture</string>
    <string name="takegallery">Choose from gallery</string>
    <string name="lastseen">Last seen location:</string>
    <string name="picchange">Click above to change picture</string>
    <string name="name">Name: </string>
    <string name="email">Contact: sgcan@gmail.com</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="pwchange">Click here to change password</string>
    <string name="oldpw">Old password:</string>
    <string name="newpw">New password:</string>
    <string name="newpwcheck">Retype new password:</string>
    <string name="back">Back</string>
    <string name="changepw">Change password</string>
    <string name="voicecontrol">Enable text to speech</string>
    <string name="welcome">Welcome!</string>
</resources>
